Картинка у списка задач

--- a/task-module/src/components/TaskList/TaskList.css
+++ b/task-module/src/components/TaskList/TaskList.css
@@ -602,3 +602,31 @@
     max-height: calc(100vh - 340px);
   }
 }
+
+.task-list__avatar {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  background-color: #e0e0e0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  font-size: 14px;
+  font-weight: bold;
+  color: #555;
+}
+
+.task-list__avatar-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.task-list__avatar-fallback {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
